--- a/学习/12.1/任务10/新建文件夹/float.css
+++ b/学习/12.1/任务10/新建文件夹/float.css
@@ -1,7 +1,6 @@
 #header{
   width: 100%;
   height: 45px;
-  border: 1px solid;
   background-color:rgb(51,51,51);
   float: right;
 
@@ -19,8 +18,25 @@
   display: inline-block;
   font-family: 微软雅黑;
   color: white;
-
+  float: right;
 }
-#fooder{
-  width:
+#footer{
+  width:100%;
+  height: 43px;
+  background-color:rgb(51,51,51);
+position: absolute;
+bottom: 20px;
+left: 0px;
+}
+.foot1 li{
+  display: inline-block;
+  float: left;
+  color: white;
+  font-family: 微软雅黑；
+}
+#content{
+  border: 1px solid;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
