--- a/学习/12.1/任务10/任务题一/float.css
+++ b/学习/12.1/任务10/任务题一/float.css
@@ -43,10 +43,10 @@
   bottom: 20px;
   left: 0px;
   clear: both;
-  foot1{
+}
+.foot1 {
     clear: both;
   }
-}
 .foot1 li {
   margin-left: 13%;
   list-style: none;
@@ -55,9 +55,7 @@ a{
   text-decoration: none;
   color: white;
   float: left;
-  display: inline-block;
   margin: -3px 10px;
-
 }
 #content{
   border: 1px solid white;
@@ -76,7 +74,6 @@ a{
   float: left;
 }
 .ct2{
-  width: auto;
   height: 200px;
   margin-left: 212px;
   margin-top: 10px;
