--- a/学习/12.1/任务10/任务题二/a1.css
+++ b/学习/12.1/任务10/任务题二/a1.css
@@ -43,3 +43,14 @@
   border-right: 1px transparent;
   background: #fff;
 }
+.haha :after{
+  border: 1px solid;
+  background-color: red;
+  content: "  fdf";  
+    display: block;
+
+
+}
+.b1{
+
+}
