--- a/学习/新建文件夹/自学/新建文件夹/shoufnegqin.css
+++ b/学习/新建文件夹/自学/新建文件夹/shoufnegqin.css
@@ -3,7 +3,7 @@ a{
   background: green;
   color: white;
   text-decoration: none;
-  padding: .2em 1em;
+  padding: 0.2em 1em;
   border-bottom: 1px solid #ddd;
 }
 
