--- a/学习/12.7/a.css
+++ b/学习/12.7/a.css
@@ -20,7 +20,7 @@ html,body{
   line-height: 600px;
   font-size: 55px;
 }
-p{
+#first p{
   color: white;
   position: absolute;
   top: 50%;
@@ -59,16 +59,55 @@ p{
   text-decoration: none;
   color: green;
 }
+#second a:hover{
+  text-decoration: underline;
+}
 #third{
   background: url(2.jpg) 100% 20% no-repeat;
   background-size: cover;
   height: 500px;
   width: 100%;
-  border: 1px solid;
   opacity: 0.7;
+  text-align: center;
+  position: relative;
 }
-
-
+#third h1{
+  color: white;
+}
+.module1{
+  color: white;
+  display: inline-block;
+}
+.module1 a{
+  display: inline-block;
+  height: 25px;
+  width: 85px;
+  background: yellow;
+  text-decoration:none;
+  line-height: 25px;
+  color: green;
+}
+.module1 a:hover{
+  background-color: rgb(248, 203, 107);
+}
+@font-face {
+  font-family: 'iconfont2';
+  src: url('iconfont2.eot');
+  src: url('iconfont2.eot?#iefix') format('embedded-opentype'),
+  url('iconfont2.woff') format('woff'),
+  url('iconfont2.ttf') format('truetype'),
+  url('iconfont2.svg#iconfont') format('svg');
+}
+.iconfont2{
+  font-family:"iconfont2" !important;
+  font-size:120px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+  color: red;
+  margin: 50px;
+}
 #forth{
   background: url(1.jpg) 100% 0 no-repeat;
   background-size: cover;
@@ -77,9 +116,17 @@ p{
   border: 1px solid;
 }
 #forth h1{
-  color: yellow;margin 10px;
+  color: yellow;
+  margin-top: 188px;
   font-size: 80px;
+  text-align: center;
 
+
+}
+#fifth{
+  clear: both;
+  width: 960px;
+  margin: 0 auto;
 }
 #fifth h1{
   text-align: center;
@@ -88,12 +135,110 @@ p{
 }
 #fifth li{
   float: left;
-  margin: 30px;
   list-style: none;
-
-
+  margin:30px 30px;
 }
 #fifth li img{
   width: 400px;
   height: 400px;
+}
+#fifth>a{
+  background: #999;
+  color: white;
+  padding:5px 25px;
+  text-decoration:none;
+  position: relative;
+  left: 50%;
+  margin-left: -38px;
+}
+#fifth>a:hover{
+  background-color: #666;
+}
+#sixth{
+  border: 1px solid #777;
+  height: 200px;
+  margin: 50px auto;
+  background: #777;
+  position: relative;
+  text-align: center;
+}
+#sixth p{
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 44px;
+  margin-top: 68px;
+}
+#sixth a{
+  text-decoration: none;
+}
+#sixth .link1{
+  background: white;
+  color: #777;
+  width: 130px;
+  height: 40px;
+  display: inline-block;
+  line-height: 40px;
+}
+#sixth .link1:hover{
+opacity: 0.8;
+}
+#sixth .link2{
+  font-weight: bold;
+  background: #333;
+  color: white;
+  width: 130px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+}
+#sixth .link2:hover{
+opacity: 0.8;
+}
+#seventh{
+  height: 400px;
+  text-align: center;
+}
+@font-face {
+  font-family: 'iconfont1';
+  src: url('iconfont1.eot');
+  src: url('iconfont1.eot?#iefix') format('embedded-opentype'),
+  url('iconfont1.woff') format('woff'),
+  url('iconfont1.ttf') format('truetype'),
+  url('iconfont1.svg#iconfont') format('svg');
+}
+.iconfont1{
+  font-family:"iconfont1" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+  color: black;
+}
+.both{
+  list-style: none;
+}
+.end1 a{
+  display: inline-block;
+  text-decoration: none;
+
+}
+@font-face {
+  font-family: 'iconfont3';
+  src: url('iconfont3.eot');
+  src: url('iconfont3.eot?#iefix') format('embedded-opentype'),
+  url('iconfont3.woff') format('woff'),
+  url('iconfont3.ttf') format('truetype'),
+  url('iconfont3.svg#iconfont') format('svg');
+}
+.iconfont3{
+  font-family:"iconfont3" !important;
+  font-size:50px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.tubiao{
+margin-top: 20px;
 }
