--- a/学习/12.7/a.css
+++ b/学习/12.7/a.css
@@ -47,13 +47,12 @@ html,body{
 }
 
 #second{
-  height: 250px;
   position: relative;
 }
 #second .blank{
   text-align: center;
   position: relative;
-  top: 70px;
+  margin: 130px auto;
 }
 #second a{
   text-decoration: none;
@@ -63,20 +62,28 @@ html,body{
   text-decoration: underline;
 }
 #third{
-  background: url(2.jpg) 100% 20% no-repeat;
+  background: url(2.jpg) 0 0 no-repeat;
   background-size: cover;
-  height: 500px;
-  width: 100%;
   opacity: 0.7;
   text-align: center;
-  position: relative;
+  padding: 20px 0;
+}
+.z3{
+  width: 1000px;
+  margin: 0 auto;
 }
 #third h1{
   color: white;
 }
+.wrip{
+  overflow: auto;
+
+}
 .module1{
   color: white;
-  display: inline-block;
+  float: left;
+  list-style: none;
+  margin:auto 6px;
 }
 .module1 a{
   display: inline-block;
@@ -112,31 +119,28 @@ html,body{
   background: url(1.jpg) 100% 0 no-repeat;
   background-size: cover;
   width: 100%;
-  height: 600px;
   border: 1px solid;
 }
 #forth h1{
   color: yellow;
-  margin-top: 188px;
-  font-size: 80px;
+  margin: 250px auto;
+  font-size: 120px;
   text-align: center;
-
-
 }
 #fifth{
   clear: both;
   width: 960px;
   margin: 0 auto;
+  text-align: center;
 }
 #fifth h1{
   text-align: center;
   line-height: 100px;
-  border-bottom: 3px solid #ccc;
 }
 #fifth li{
   float: left;
   list-style: none;
-  margin:30px 30px;
+  margin:6px 20px;
 }
 #fifth li img{
   width: 400px;
@@ -145,29 +149,31 @@ html,body{
 #fifth>a{
   background: #999;
   color: white;
-  padding:5px 25px;
-  text-decoration:none;
-  position: relative;
-  left: 50%;
-  margin-left: -38px;
+  height: 30px;
+  width: 118px;
+  line-height: 30px;
+  display: inline-block;
+  text-decoration: none;
+  margin-top: 20px;
 }
 #fifth>a:hover{
   background-color: #666;
 }
 #sixth{
-  border: 1px solid #777;
-  height: 200px;
   margin: 50px auto;
   background: #777;
   position: relative;
-  text-align: center;
 }
 #sixth p{
   color: white;
   font-weight: bold;
   text-align: center;
-  margin-left: 44px;
-  margin-top: 68px;
+}
+#sixth .kuang{
+  width: 960px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 50px 0;
 }
 #sixth a{
   text-decoration: none;
@@ -196,8 +202,10 @@ opacity: 0.8;
 opacity: 0.8;
 }
 #seventh{
-  height: 400px;
   text-align: center;
+  width: 960px;
+  margin: 0 auto;
+  padding-right: 30px;
 }
 @font-face {
   font-family: 'iconfont1';
@@ -239,6 +247,6 @@ opacity: 0.8;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-.tubiao{
-margin-top: 20px;
+#seventh h3{
+  padding-left: 30px;
 }
