--- a/学习/12.9/任务15-2/task15.css
+++ b/学习/12.9/任务15-2/task15.css
@@ -76,7 +76,7 @@ html,body{
 }
 .kuang2{
   width: 960px;
-  margin: 130px auto;
+  margin: 0 auto;
   text-align: center;
 }
 .box1:after{
@@ -89,7 +89,6 @@ html,body{
   height: 240px;
   border-radius: 50%;
   border: 15px solid white;
-
 }
 .box1 li{
   list-style: none;
@@ -153,14 +152,118 @@ clear: both;
 .kuang4 h1{
 padding-top: 115px;
 }
+.kuang5{
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
+}
 .box4 img{
   width: 150px;
   height: 150px;
   border: 8px solid #ccc;
   border-radius: 50%;
 }
-.box4 li{
-  width: 600px;
+.box4 li:after{
+  display: block;
+  content: "";
+  clear: both;
+}
+.box4 .words1{
+  width: 335px;
   height: 400px;
+  text-align: right;
+}
+.box4 .pic4,.pic5{
+  position: relative;
+  margin: 0 30px;
+}
+.box4 .words1,.pic4{
+  float: left;
+}
+.box4 .words2{
+  width: 335px;
+  height: 400px;
+
+}
+.box4 .words2,.pic5{
+  float: right;
+}
+.kuang5 h1{
+  text-align: center;
+  margin: 115px 0;
+}
+.box4{
+  list-style: none;
+}
+.line{
   border: 1px solid #ccc;
+  height: 232px;
+  width: 0;
+  position: absolute;
+  top: 166px;
+  left: 113px;
+}
+.end{
+  width: 150px;
+  height: 150px;
+  border: 8px solid #ccc;
+  border-radius: 50%;
+  position:relative;
+  left: 399px;
+  margin-bottom: 70px;
+}
+#sixth{
+  background: url(11.jpg) 0 0 no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+.kuang6{
+  width :960px;
+  margin: 0 auto;
+}
+.kuang6 p{
+  color: #ccc;
+  text-align: center;
+  font-size: 100px;
+  font-weight: bold;
+  padding-top: 127px;
+}
+.shuru1 input{
+  padding: 20px;
+  width: 450px;
+  height: 10px;
+  margin: 20px 0;
+  float: left;
+  border-radius: 6px;
+}
+.former:after{
+  content: "";
+  clear: both;
+  display: block;
+}
+.former{
+  position: relative;
+}
+.shuru2 textarea{
+  width: 450px;
+  height: 200px;
+  float: left;
+  border-radius: 6px;
+  font-family:微软雅黑;
+  padding: 20px 10px;
+
+}
+.shuru2{
+  position: absolute;
+  top: 20px;
+  left: 505px;
+  height: 30px;
+}
+.anniu input{
+  padding: 20px 33px;
+  border-radius: 6px;
+  position: absolute;
+  top: 300px;
+  left: 408px;
 }
