--- a/学习/12.9/任务15-2/task15.css
+++ b/学习/12.9/任务15-2/task15.css
@@ -262,6 +262,7 @@ padding-top: 115px;
 .anniu input{
   padding: 20px 33px;
   border-radius: 6px;
+  margin-bottom: 20px;
   position: absolute;
   top: 300px;
   left: 408px;
