--- a/学习/12.1/任务10/任务题一/float.css
+++ b/学习/12.1/任务10/任务题一/float.css
@@ -39,14 +39,11 @@
   width:100%;
   height: 43px;
   background-color:rgb(51,51,51);
-  position: absolute;
-  bottom: 20px;
-  left: 0px;
-  clear: both;
+  line-height: 43px;
+  margin-top: -15px;
+
 }
-.foot1 {
-    clear: both;
-  }
+
 .foot1 li {
   margin-left: 13%;
   list-style: none;
@@ -60,15 +57,19 @@ a{
 #content{
   border: 1px solid white;
   width: 70%;
-  height: 720px;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   clear: both;
 }
+#content:after{
+  content: "";
+  display: block;
+  clear: both;
+}
 .ct1{
   width: 200px;
-  height:674px;
+  height:510px;
   margin:11px 0px;
   background: rgb(238,238,238);
   float: left;
